set SONAR_SCANNER_OPTS enviromet variable