@@ -57,7 +57,8 @@ pipeline {
             }
             steps{
                 withSonarQubeEnv("${SONARSERVER}"){
-                    sh '''${scannerHome}/bin/sonar-scanner -X -Dsonar.projectKey=vprofile \
+                    sh '''export SONAR_SCANNER_OPTS="--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.stream=ALL-UNNAMED" \
+                    ${scannerHome}/bin/sonar-scanner -X -Dsonar.projectKey=vprofile \
                    -Dsonar.projectName=vprofile  \
                    -Dsonar.projectVersion=1.0 \
                    -Dsonar.sources=src/ \
